// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfettiIconComponent matches snapshot 1`] = `
<InteractiveElement
  className=""
  onMouseOver={[Function]}
  type="div"
>
  <div
    className="confetti-container"
  >
    <Confetti
      active={false}
      config={
        Object {
          "angle": 90,
          "colors": Array [
            "#0071BC",
            "#205493",
            "#9BDAF1",
            "#FAD980",
            "#E31C3D",
          ],
          "dragFriction": 0.1,
          "duration": "3000",
          "elementCount": 50,
          "height": "10px",
          "spread": 45,
          "stagger": 2,
          "startVelocity": "30",
          "width": "10px",
        }
      }
    />
  </div>
  <div />
</InteractiveElement>
`;

exports[`ConfettiIconComponent matches snapshot when colors are provided 1`] = `
<InteractiveElement
  className=""
  onMouseOver={[Function]}
  type="div"
>
  <div
    className="confetti-container"
  >
    <Confetti
      active={false}
      config={
        Object {
          "angle": 90,
          "colors": Array [
            "#fff",
            "#000",
          ],
          "dragFriction": 0.1,
          "duration": "3000",
          "elementCount": 50,
          "height": "10px",
          "spread": 45,
          "stagger": 2,
          "startVelocity": "30",
          "width": "10px",
        }
      }
    />
  </div>
  <div />
</InteractiveElement>
`;
